# proj-question-generator

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  requirements.yml
question_generator/: create_pdf_all.py  prompt.md  question_builder.py  question_find_passed.py  question_solver.py
question_generator/questions/: README.md  question_ch5_0001.py  question_ch5_0001.sh  question_ch5_0001.txt  question_ch5_0001_test.txt  question_ch5_0002.py  question_ch5_0002.sh  question_ch5_0002.txt  question_ch5_0002_test.txt  question_ch5_0003.py  question_ch5_0003.sh  question_ch5_0003.txt  question_ch5_0003_test.txt  question_ch5_0004.py  question_ch5_0004.sh  question_ch5_0004.txt  question_ch5_0004_test.txt  question_ch5_0005.py  question_ch5_0005.sh  question_ch5_0005.txt  question_ch5_0005_test.txt  question_ch5_0006.py  question_ch5_0006.sh  question_ch5_0006.txt  question_ch5_0006_test.txt  question_ch5_0007.py  question_ch5_0007.sh  question_ch5_0007.txt  question_ch5_0007_test.txt  question_ch5_0008.txt  question_ch5_0009.py  question_ch5_0009.sh  question_ch5_0009.txt  question_ch5_0009_test.txt  question_ch5_0010.py  question_ch5_0010.sh  question_ch5_0010.txt  question_ch5_0010_test.txt  question_ch5_0011.py  question_ch5_0011.sh  (+186 more)
question_generator/questions_ch2/: question_ch2_0002.py  question_ch2_0002.sh  question_ch2_0002.txt  question_ch2_0002_test.txt  question_ch2_0003.py  question_ch2_0003.sh  question_ch2_0003.txt  question_ch2_0003_test.txt  question_ch2_0006.py  question_ch2_0006.sh  question_ch2_0006.txt  question_ch2_0006_test.txt  (+24 more)
(+316 files in other folders)
