[project]
name = "question-generator"
version = "0.1.0"
description = "Gera questões automaticamente com NLP"
authors = [
    {name = "Seu Nome",email = "email@example.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
